# ChangeLog for gnome-base/gnome-vfs
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-vfs/ChangeLog,v 1.362 2014/11/21 09:20:25 pacho Exp $

  21 Nov 2014; Pacho Ramos <pacho@gentoo.org> -gnome-vfs-2.24.4-r1.ebuild:
  Drop old

  11 Oct 2014; Markus Meier <maekke@gentoo.org> gnome-vfs-2.24.4-r2.ebuild:
  arm stable, bug #512012

  15 Sep 2014; Agostino Sarubbo <ago@gentoo.org> gnome-vfs-2.24.4-r2.ebuild:
  Stable for sparc, wrt bug #512012

  01 Sep 2014; Christoph Junghans <ottxor@gentoo.org>
  gnome-vfs-2.24.4-r2.ebuild:
  added prefix support (bug #519060)

  25 Aug 2014; Agostino Sarubbo <ago@gentoo.org> gnome-vfs-2.24.4-r2.ebuild:
  Stable for alpha, wrt bug #512012

  23 Aug 2014; Agostino Sarubbo <ago@gentoo.org> gnome-vfs-2.24.4-r2.ebuild:
  Stable for ia64, wrt bug #512012

  21 Aug 2014; Agostino Sarubbo <ago@gentoo.org> gnome-vfs-2.24.4-r2.ebuild:
  Stable for ppc64, wrt bug #512012

  28 Jul 2014; Agostino Sarubbo <ago@gentoo.org> gnome-vfs-2.24.4-r2.ebuild:
  Stable for ppc, wrt bug #512012

  23 Jul 2014; Agostino Sarubbo <ago@gentoo.org> gnome-vfs-2.24.4-r2.ebuild:
  Stable for x86, wrt bug #512012

  22 Jul 2014; Agostino Sarubbo <ago@gentoo.org> gnome-vfs-2.24.4-r2.ebuild:
  Stable for amd64, wrt bug #512912

  24 Jun 2014; Michał Górny <mgorny@gentoo.org> gnome-vfs-2.24.4-r2.ebuild:
  Lower dev-libs/glib dep to first known EAPI=5 version, requested by Funtoo for
  GNOME 3.6.

  18 Jun 2014; Michał Górny <mgorny@gentoo.org> gnome-vfs-2.24.4-r2.ebuild:
  Update dependencies to require guaranteed EAPI=5 or multilib ebuilds, bug
  #513718.

  12 Jun 2014; Michał Górny <mgorny@gentoo.org> gnome-vfs-2.24.4-r2.ebuild:
  Require newer virtual/krb5 so that ${CHOST}-krb5-config is in place.

  11 Jun 2014; Michał Górny <mgorny@gentoo.org> gnome-vfs-2.24.4-r2.ebuild:
  Whitespace.

*gnome-vfs-2.24.4-r2 (11 Jun 2014)
