@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX gnome-vfs-2.12.0-afs.patch 663 SHA256 a0bef85feae74a1ecc46f148a476d295e65c92b7a379546fb68186a7733e2e00 SHA512 38b1268e774ba2e7726295ee019f939b9dfc5d1a67f8e45d9bc30a2ae20f647acd9570740ad06cb17d83d9299f863aa14dd77a2ca2f9f4910b9c328111ae5ca1 WHIRLPOOL 80b524e57e89c1c6872d0a31d92f7ed27f4cec3d4bf04dac15770faf8c600ce92cf6e91cfb1e023635ae085caf525f6233be27bf193feb2e93d61452aca042a5
 AUX gnome-vfs-2.15.2-headers-define.patch 569 SHA256 ac0136ec0df6ba7efac5ac3403809383e7f681556f082537ee866d0398110918 SHA512 fc4c512ffe74368e83026b24d32c2c77a41f0430d24e782586938dde6061cbc023adcbe2bc21a19d2b584b6c22078ae6d3df7c839576270055aa6832337df60a WHIRLPOOL e547fd177ae3b54e98042339eca7013049493d5513582394de6a20ca7397c50427bd0aa650e90e92d54da2c9226e19c0793942d36c7d47d0da6f2c4eae170f1d
 AUX gnome-vfs-2.16.0-no-dbus-crash.patch 710 SHA256 b68247cc6abf30d183efb51480793917e820ce461b0c62003321aceced177345 SHA512 527c24b8902c9a1049b08f6479d32674c8f382a9ae4d7c6f3de772c09347555fda680a3dbfe70fcc312db8aa939ccbc4a42d1a84fd6a9f4a51180943766f5261 WHIRLPOOL f7a60f04c5d86697c1e2f8e40251614bd7ad1a8ca9500d57d25a2570220804175b7d77eea1a51bb5d900aaa81c4f1f600a6530ffd7b45b378ce222846125fdb4
@@ -11,6 +14,13 @@ AUX gnome-vfs-2.24.4-gnutls27.patch 3235 SHA256 36ddcc5004189c3aea4edbd88fa3bbfe
 AUX gnome-vfs-2.24.4-gnutls34.patch 1775 SHA256 4e959739bbea6dcef73e0613ce469463a7b55520a6559ebaa74e4d5b852d5318 SHA512 1fa413dd368b9ddabbb75ccb6b6de6f0badc7a65cfc60f7600c26fa38f676baab7177975042e5742a413b3a5828a9056eb0991378e91156e53181600af4b669d WHIRLPOOL fc9de9aa46c9aab42f4445938b735f865e1937882c5a61662f1eb1ddd4095017410c265beabd4a05f6f8f3b0e12c2619df6d8b71f0f47dfd1c17e9ab57e8b19a
 AUX gnome-vfs-2.24.4-home_dir_fakeroot.patch 4996 SHA256 4d1841e7c296f7774aea01649d28549b5d04db486c5c7cd0b4c0e63ba04e4dc0 SHA512 dcad32f15afaa7677c6d10672c06c6d635a17d2bb686883c94f42bfc4f9fc6c525c4f097c3af718020fd224e06bba0d0a4ec68cde431545e9fe4a2c65320a48f WHIRLPOOL 253cf6b04c06bc03cd97ea10b7d6a5d82500b6c54aa835502e7ba6517abec5782e84997a34a2397b863ba2a37af07b697cb452c3486fd0d98a7cd67cd5fc7cfe
 DIST gnome-vfs-2.24.4.tar.bz2 1890370 SHA256 62de64b5b804eb04104ff98fcd6a8b7276d510a49fbd9c0feb568f8996444faa SHA512 db4e49f5356647667c4d40c7ce5c299c934cb41069b2086fb89c4e87b2202b5009616d65c1dafeb93e37033a5a68965342c2b18d87b8a3265c4347dec5128581 WHIRLPOOL 53376928ae04cc1d693e57afe18f2b91431b8c8d678cf58eedd057eb23e9f34010294faf83e3085126adf310da5a135076cf085f63f1db0d3a1add21cc0641a9
-EBUILD gnome-vfs-2.24.4-r3.ebuild 4170 SHA256 05c4d33d624aa862b6b67816845a08458bf4e222e0b62012e1d5044459470230 SHA512 e5b416c971f904e8cbd7547d93b14e064809d39ef1994881472fedc1cfb9be4446239a22a3ef955a458b20302636d2e82437ea4b6c3a2c83a111b063bff4c5b9 WHIRLPOOL 18ad866f6119af2c6f80f8dd8eee42236d644babd6b01231c51eb40f255cf8105b213fb03da5175bf513029d023eb2a54cfd10f928b607c960f8c4c3b715f7b3
-MISC ChangeLog 48278 SHA256 902e14dc381fb1c2df6eed7f85288fcc569b8af94beb5498af7ae5a1ce7299d1 SHA512 9470243581cdf8060c9d67fb28f43a8c19f4e958baa223cf1cf6955f34ad61fadb22d9e1607453b31d4e36bcbb1a279c770885d1944c404a897c7dfaa5d6fc62 WHIRLPOOL c2e1f17948b1eba7805d6594469080718b968db8ec548ecf7990840764cac8089fbfa15f4ee22f86c4e0b23260ca110ed882b41e789770a64db22218deb7e38d
-MISC metadata.xml 158 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1 SHA512 7fbfbd2b3ed1b81867d55648509f778fdbe2091af53727b3426a3c7f453ae7e1663a99fdd2101508b8d6c85b3158459c93551b77a6a394f02d7e11cbc8a5ecf4 WHIRLPOOL 4bcd5662974877d42ebc4361b6eb412bfeea2af7144b436ce7ed152327d554afc321c376625ba0bb85a704b70d86e3c4882dff3573047acddd8ffccf655d4f7e
+EBUILD gnome-vfs-2.24.4-r5.ebuild 4251 SHA256 f6c19bab6d2f4b64b9b56639b28a1367e9a4fc610d9775fdf81d40dea165f44e SHA512 ce7da5084987da551c9038f35e952af923ea472e668a07fc4645c280fed3852bda33e96810a2059a6097000243fa5cba05681c233cdff757a42df10c8a7d6df8 WHIRLPOOL 2b6828be3a6046538262f0b73ccb900c84d098ddfdc6c7b11db95df4e8cee9e4eedd2453622d16babee9f350225c89f469330a75ab870cba5de4e2e6d3680943
+MISC ChangeLog 48516 SHA256 d925433da5b67597812b886ed4dc00e83813d9d549b065e98d5841063a513529 SHA512 591460001034b485b348c4d7c745ce7d892bc24153f637cd0054ff5f13e29b661b70415df2ace1434408f51cc6bd353305c39e3196e6b5ed041a24ef9efdde36 WHIRLPOOL 10d307614c7b45eb72c398ec88fd6838f66275a068a9064e02bd7b4156d4009344746abccb5743d529cecbeb20d63983a7db0ffc56f7f4d2aed54e14a7f055c6
+MISC metadata.xml 249 SHA256 4505b0bfeadff287958620b7dc7b7209699065a8f17139a237a5dd409a726a97 SHA512 c40662134899a5c9f0369a1017806f35adf3280a0b3c91726f7a8ca6012a073a8b471583f5bfb6fe95faac1dcf607e8e2e43f8c91d48ec46f4a8824e2f551506 WHIRLPOOL 333a938ee1d2124595596c572697bf5ebad523a92ba12005cfb12e6bb6270881a94a911f0cc9c1cf2bb571559e8271e07dfd307dabe50058236dbe7103562b92
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EARYIAAYFAlfSGQoACgkQz9oPmzWWQiLrOgD/UW5tU+AiIp8aElUB0OrAEL4Y
+89xyCcb8R6Zp/cd6NroBAJLfMKhhxWLcnr1Q26C5tA3gZfOaKJ4W1OI3pCJQWu4D
+=f4WL
+-----END PGP SIGNATURE-----
